--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -8,20 +8,20 @@ $gutter: 20px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: 320px;
   grid-auto-flow: dense;
-  .imageConteiner {
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      user-select: none;
-    }
-    // &:nth-child(2n + 1) {
-    //   grid-column: span 2;
-    // }
-    // &:nth-child(3n + 2) {
-    //   grid-column: span 2;
-    // }
-  }
+  // .imageConteiner {
+  //   img {
+  //     object-fit: fill;
+  //     width: 100%;
+  //     height: 100%;
+  //     user-select: none;
+  //   }
+  //   // &:nth-child(2n + 1) {
+  //   //   grid-column: span 2;
+  //   // }
+  //   // &:nth-child(3n + 2) {
+  //   //   grid-column: span 2;
+  //   // }
+  // }
 }
 @media (max-width: 576px) {
   .wrapper {
