--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,7 +61,7 @@
   }
   .menu {
     opacity: 0;
-    display: flex;
+    display: none;
     padding-top: 20px;
     flex-direction: column;
     align-items: center;
