--- a/src/Pages/Admin/Admin.module.scss
+++ b/src/Pages/Admin/Admin.module.scss
@@ -3,9 +3,40 @@
   flex-direction: column;
   max-width: 200px;
   justify-content: center;
-  
+  margin: 80px auto;
+  background-color: rgb(151, 151, 151);
+  padding: 5px;
+  border: 2px solid black;
+  border-radius: 10px;
+  gap: 15px;
+
+  input {
+
+    width: 100%;
+    height: 100%;
+    font-size: large;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 10px;
+    background: rgb(83, 83, 83);
+    color: rgb(255, 255, 255);
+    box-shadow: 3px 3px 5px rgb(0, 0, 0);
+  }
 }
 
 .button {
-  padding: 20px;
+  cursor: pointer;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgb(0, 0, 0);
+  background-color: rgb(3, 145, 38);
+  margin: 5px;
+  padding: 5px;
+  color: white;
+  font-size: medium;
+  font-weight: 600;
+  text-shadow: 2px 2px 1px black;
+  &:hover {
+    transform: scale(105%);
+  }
 }
