--- a/src/components/AddPost/AddPost.module.scss
+++ b/src/components/AddPost/AddPost.module.scss
@@ -1,16 +1,15 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   z-index: 1;
-  margin: 0px 10px;
-  padding: 10px;
+  margin: 30px 20px;
+  padding: 20px;
   justify-content: space-between;
-  position: sticky;
-  top: 80px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(46, 46, 46, 0.521);
   border-radius: 20px;
+  height: 100%;
 }
 
 .imageUploadBlock {
@@ -18,16 +17,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 80px;
+  align-self: center;
+  justify-self: center;
 }
 
 .imagePreviewConteiner {
-  
-  width: 400px;
-  height: 600px;
-  background-color: rgb(128, 128, 128);
-  border: 1px solid black;
-  box-shadow: 0px 0px 10px rgb(212, 212, 212);
+  max-width: 320px;
+  min-width: 320px;
+  width: 100%;
+  height: 60vh;
+  background-color: rgb(54, 54, 54);
+  border: 2px solid black;
+  box-shadow: 5px 5px 10px rgb(0, 0, 0);
   border-radius: 20px;
   img {
     object-fit: cover;
@@ -40,25 +41,40 @@
 .button {
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
-  box-shadow: 2px 2px 3px;
+  box-shadow: 3px 3px 5px rgb(245, 245, 245);
   background-color: rgb(3, 145, 38);
   margin: 5px;
   padding: 5px;
+  color: white;
+  font-size: medium;
+  font-weight: 600;
+  text-shadow: 2px 2px 1px black;
+  cursor: pointer;
   &:hover {
     transform: scale(105%);
   }
 }
 
 .buttonLogOut {
-  position: sticky;
-  top: 0;
+  color: white;
+  font-size: medium;
+  font-weight: 600;
+  text-shadow: 2px 2px 1px black;
+  position: relative;
+  top: 30;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
   box-shadow: 2px 2px 3px;
   background-color: rgb(145, 55, 3);
   margin: 5px;
   padding: 5px;
+  cursor: pointer;
   &:hover {
     transform: scale(105%);
   }
+}
+
+.buttonsBlock {
+  display: flex;
+  flex-direction: column;
 }
