--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,10 +6,11 @@
   width: 100%;
   margin: 0;
   z-index: 50;
-  padding: 0 2em;
+  padding: 0 30px;
   position: sticky;
   top: 0;
   margin-bottom: 20px;
+  height: 50px;
 }
 .mainTitle {
   display: block;
@@ -18,7 +19,7 @@
 
 .navbar {
   z-index: 1;
-  height: 50px;
+
   display: flex;
   align-items: center;
 }
@@ -26,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 4rem;
 }
 @media (max-width: 767px) {
   .burgerButton {
@@ -90,6 +91,7 @@
     position: absolute;
     width: 100vw;
     height: 80vh;
+    gap: 1rem;
     top: 50px;
     left: 0;
     right: 0;
@@ -100,6 +102,7 @@
     li {
       opacity: 100;
       transition: all 5s ease-out;
+      font-size: larger;
     }
   }
 }
