--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -2,7 +2,7 @@ $imageWidth: 400px;
 
 .imageConteiner {
   position: relative;
-  height: calc(100vh/2.22);
+  height: calc(100vh / 2.22);
   min-width: 150px;
 
   &:nth-child(5n + 1) {
@@ -26,6 +26,10 @@ $imageWidth: 400px;
     width: 100%;
     height: 100%;
     filter: brightness(100%);
+    transition: all 0.5s ease-out;
+    &:hover {
+      filter: brightness(120%);
+    }
   }
 }
 
@@ -46,18 +50,4 @@ $imageWidth: 400px;
 }
 
 @media (min-width: 1024px) {
-  .imageConteiner {
-    &::nth-child(4n + 1) {
-      width: 250px;
-    }
-    &::nth-child(4n + 2) {
-      width: 270px;
-    }
-    &::nth-child(4n + 3) {
-      width: 300px;
-    }
-    &::nth-child(4n + 4) {
-      width: 250px;
-    }
-  }
 }
