--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -10,29 +10,47 @@ $gutter: 20px;
   padding: 0 30px;
 }
 @media (max-width: 576px) {
-  // .wrapper {
-  //   background-color: rgb(17, 12, 12);
-  //   display: grid;
-  //   grid-gap: 5px;
-  //   grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-  //   grid-auto-rows: 200px;
-  //   grid-auto-flow: dense;
-  //   padding: 5px;
+  .wrapper {
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+    align-items: center;
+    gap: 10px;
+    padding: 0 5px;
+  }
+}
 
-  //   .imageConteiner {
-  //     img {
-  //       object-fit: cover;
-  //       width: 100%;
-  //       height: 100%;
-  //       user-select: none;
-  //     }
-  //     &:nth-child(even) {
-  //       grid-column: span 2;
-  //     }
-  //     &:nth-child(odd) {
-  //       grid-column: span 2;
-  //       grid-row: span 2;
-  //     }
-  //   }
-  // }
+.previewPhoto {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    filter: brightness(100%);
+  }
+
+  h1 {
+    position: absolute;
+    top: 55%;
+    justify-content: center;
+    text-align: center;
+    color: black;
+    font-size: 3em;
+    z-index: 50;
+    color: white;
+
+    text-shadow: 1px 1px 5px rgb(0, 0, 0);
+    span {
+      :nth-child(1n) {
+        color: red;
+      }
+    }
+
+    @media (max-width: 767px) {
+      top: 20%;
+      color: rgb(231, 229, 229);
+    }
+  }
 }
