--- a/src/components/AddPost/AddPost.module.scss
+++ b/src/components/AddPost/AddPost.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -60,8 +61,9 @@
   font-size: medium;
   font-weight: 600;
   text-shadow: 2px 2px 1px black;
-  position: relative;
-  top: 30;
+  // position: absolute;
+  // top: 0px;
+  // right: 0px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
   box-shadow: 2px 2px 3px;
