--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@400;700&display=swap');
+
 #root {
 }
 body {
+  font-family: 'Rowdies', cursive;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: rgb(31, 31, 31);
   width: 100%;
   height: 100%;
   color: white;
+  a {
+    color: white;
+    outline: none;
+    text-decoration: none;
+    &:hover {
+      color: #a8a8a8;
+    }
+  }
 }
+
 * {
   outline: none;
   text-decoration: none;
   color: white;
+  padding: 0;
+  margin: 0;
 }
 h1 {
-    color: white
+  color: white;
 }
 .App {
 }
