--- a/src/components/AddPost/AddPost.module.scss
+++ b/src/components/AddPost/AddPost.module.scss
@@ -9,6 +9,7 @@
   padding: 20px;
   justify-content: space-between;
   background-color: rgba(46, 46, 46, 0.521);
+  box-shadow: 0px 0px 20px rgb(15, 15, 15);
   border-radius: 20px;
   height: 100%;
 }
