--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,19 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #494949ee;
+  background-color: rgb(31, 31, 31);
+  border-bottom: 1px solid rgba(167, 167, 167, 0.247);
   width: 100%;
   margin: 0;
   z-index: 50;
   padding: 0 30px;
+  padding-top: 5px;
   position: sticky;
   top: 0;
   margin-bottom: 20px;
-  height: 50px;
 }
 .mainTitle {
-  display: block;
-  z-index: 10;
+  display: inline-block;
 }
 
 .navbar {
@@ -74,7 +74,8 @@
     left: -100%;
     right: 0;
     background-color: #363636;
-    transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in-out;
+    box-shadow: inset 7px 7px 5px rgb(255, 0, 0);
     z-index: 0;
     li {
       opacity: 0;
@@ -94,7 +95,8 @@
     left: 0;
     right: 0;
     background-color: #363636;
-    transition: all 0.3s ease-out;
+    transition: all 0.3s ease-in-out;
+    box-shadow: inset 0px 3px 5px rgb(78, 0, 0);
     z-index: 10;
     li {
     }
