--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -4,57 +4,84 @@ $imageWidth: 400px;
   position: relative;
   height: 45.3vh;
   min-width: 150px;
-
-  &:nth-child(5n + 1) {
-    flex: 1 0 20%;
+  flex: 1 0 50%;
+  &:nth-child(even) {
+    flex: 1 0 45%;
   }
-  &:nth-child(5n + 2) {
-    flex: 1 0 25%;
+  &:nth-child(odd) {
+    flex: 1 0 45%;
   }
-  &:nth-child(5n + 3) {
-    flex: 1 0 20%;
-  }
-  &:nth-child(5n + 4) {
-    flex: 1 0 25%;
-  }
-  &:nth-child(5n + 5) {
-    flex: 1 0 20%;
-  }
-&:nth-last-of-type(1) {
-  flex: 0 0 25%;
-  width: 500px;
-}
-
   img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    filter: brightness(100%);
     transition: all 0.3s ease-out;
     cursor: pointer;
     &:hover {
-      filter: brightness(110%);
+      
+    }
+  }
+}
+
+@media (min-width: 767px) {
+  .imageConteiner {
+    position: relative;
+    height: 45.3vh;
+    min-width: 150px;
+    box-shadow: 3px 3px 7px rgb(0, 0, 0);
+
+    &:nth-child(5n + 1) {
+      flex: 1 0 20%;
+    }
+    &:nth-child(5n + 2) {
+      flex: 1 0 25%;
+    }
+    &:nth-child(5n + 3) {
+      flex: 1 0 20%;
+    }
+    &:nth-child(5n + 4) {
+      flex: 1 0 25%;
+    }
+    &:nth-child(5n + 5) {
+      flex: 1 0 20%;
+    }
+    &:nth-last-of-type(1) {
+      flex: 0 0 25%;
+      width: 500px;
+    }
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      filter: brightness(100%);
+      transition: all 0.3s ease-out;
+      cursor: pointer;
+      &:hover {
+        filter: brightness(100%);
+      }
     }
   }
 }
 
 .deleteButton {
   cursor: pointer;
-  padding: 5px;
-  border: 1px solid red;
-  border-radius: 10px;
+  padding: 6px;
+  border: 0px solid rgb(255, 0, 0);
+  font-size: medium;
+  border-radius: 100%;
   background-color: red;
   position: absolute;
   color: rgb(255, 255, 255);
   top: 5px;
   right: 5px;
   z-index: 10;
+  transition: transform 0.2s ease-out;
   &:hover {
-    transform: scale(120%);
+   
+    background-color: white;
+    color: red;
   }
-}
-
-@media (min-width: 1024px) {
 }
 
 .skeleton {
