--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -79,4 +79,14 @@ h1 {
   color: white;
   font-style: italic;
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
+  line-height: 1.5;
+}
+
+.titleBlock {
+  text-align: center;
+  padding: 40px;
+  h1 {
+    line-height: 1;
+    margin: 20px;
+  }
 }
