--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100%;
   color: white;
+
   a {
     color: white;
     outline: none;
@@ -51,4 +52,11 @@ h1 {
   &:hover {
     background: rgb(153, 69, 1);
   }
+}
+
+@media (max-width: 767px) {
+  ::-webkit-scrollbar {
+    height: 0;
+  }
+  
 }
