--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,13 +1,12 @@
-$ImageSize: 320px;
-$columns: 3;
-$gutter: 20px;
+
 .wrapper {
   display: flex;
   width: 100%;
   flex-flow: row wrap;
   align-items: center;
-  gap: 10px;
+  gap: 6px;
   padding: 0 30px;
+  scroll-behavior: smooth;
 }
 @media (max-width: 576px) {
   .wrapper {
@@ -26,7 +25,7 @@ $gutter: 20px;
   justify-content: center;
   img {
     object-fit: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     filter: brightness(100%);
   }
@@ -37,6 +36,7 @@ $gutter: 20px;
     justify-content: center;
     text-align: center;
     color: black;
+    letter-spacing: 2px;
     font-size: 3em;
     z-index: 50;
     color: white;
@@ -44,10 +44,6 @@ $gutter: 20px;
     text-shadow: 2px 2px 5px rgb(0, 0, 0);
     span {
       display: inline-block;
-      &:nth-child(2n + 1) {
-      }
-      &:nth-child(2n + 2) {
-      }
     }
 
     @media (max-width: 767px) {
@@ -61,6 +57,7 @@ $gutter: 20px;
     cursor: pointer;
     pointer-events: visible;
     font-size: 30px;
+    scroll-behavior: smooth;
     @media (max-width: 767px) {
       bottom: 10%;
     }
