--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,4 +7,27 @@
   border-top: 1px solid rgba(167, 167, 167, 0.247);
   gap: 30px;
   height: 100px;
+
+  div {
+    &:nth-child(2) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+.icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  &:hover {
+    transform: scale(110%);
+  }
+  @media (max-width: 767px) {
+    width: 35px;
+    height: 35px;
+    pointer-events: none;
+  }
 }
