--- a/src/Pages/Admin/Admin.module.scss
+++ b/src/Pages/Admin/Admin.module.scss
@@ -9,9 +9,9 @@
   border: 2px solid black;
   border-radius: 10px;
   gap: 15px;
+  text-align: center;
 
   input {
-
     width: 100%;
     height: 100%;
     font-size: large;
